<resources>
    <string name="app_name">Lind</string>
    <string name="iniciar_sesion">Iniciar sessión</string>
    <string name="enviar">Enviar</string>
    <string name="action_settings">Settings</string>
    <string name="hint_name">Nombre Completo</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="btn_sign_up">Sign Up</string>
    <string name="err_msg_name">Ingrese su nombre completo</string>
    <string name="err_msg_email">Ingrese un Email válido</string>
    <string name="err_msg_password">Ingrese el password</string>
    <string name="btn_login">Iniciar sesión</string>
    <string name="btn_register">Registrar</string>
    <string name="btn_link_to_register">Not a member? Sign up now.</string>
    <string name="btn_link_to_login">Estoy Registrado! Iniciar sesión.</string>
    <string name="welcome">Welcome</string>
    <string name="btn_logout">Cerrar sessión</string>
    <string name="confirmacion">Confirmación</string>
    <string name="name">Nombre Completo</string>
</resources>
